@@ -1,5 +1,9 @@
 2002-02-22  Ian Lance Taylor  <ian@airs.com>
 
+	* Marcus Shang: unix/xqtsub.c (fsysdep_execute): If the output
+	file is in the spool directory, create subdirectories if
+	necessary.
+
 	* uucico.c (fconn_call): If all matching ports are in use, set
 	system status to STATUS_PORT_FAILED.
 
